# taix

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  phase1-tasks.md  phase2-tasks.md  planning.md  usage.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  pane.rs  state.rs
src-tauri/src/commands/: config.rs  mod.rs  pty.rs  sessions.rs  system.rs
src-tauri/src/config/: mod.rs  schema.rs
src-tauri/src/pty/: manager.rs  mod.rs  platform.rs  session.rs
src-tauri/src/storage/: db.rs  group_repo.rs  mod.rs  session_repo.rs
src/components/layout/: ActivityBar.tsx  AppLayout.tsx  StatusBar.tsx
src/components/session/: NewSessionModal.tsx  SearchPanel.tsx  SessionList.tsx
src/components/settings/: AppearanceSettings.tsx  SettingsModal.tsx  ShellSettings.tsx  SshProfilesSettings.tsx
src/components/terminal/: ConnectingOverlay.tsx  PaneContainer.tsx  PaneDivider.tsx  TabBar.tsx  TerminalPane.tsx  TerminalSearch.tsx  TerminalTab.tsx
src/hooks/: useResize.ts  useTerminal.ts
src/services/: config.ts  pty.ts  sessions.ts  system.ts
src/stores/: sessionStore.ts  settingsStore.ts  uiStore.ts
src/types/: bindings.ts
