[package]
name = "taix"
version = "0.6.7"
description = "Terminal Session Manager with AI"
authors = []
license = "MIT"
repository = "https://github.com/rynvaro/taix"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "taix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2"
toml = "0.8"
dirs = "5"
tauri = { version = "2.10.3", features = [] }

# PTY & async
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-log = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# URL opener (G3)
open = "5"

# Type generation (tauri-specta generates TypeScript bindings from Rust types)
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "=0.0.11"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }

[dev-dependencies]
tempfile = "3"
